BlogExample: This commit merges the rewrite of the persistence layer back to trunk. * Added a Domain Model Person * Added a Person Repository * Set the loadingStrategy for posts to "proxy" * Changed the property type of Blog.posts to Tx_Extbase_Persistence_ObjectStorage * Fixed Domain Model Post: replaced arrays with Tx_Extbase_Persistence_ObjectStorage * Fixed wrong class name in method signature and comments * Changed templates to show a select box of authors (creation of new Posts not fully functional by now) * Changed populate() method * Added getFullName() to Domain Model Person * First test to handle Value Objects in the FE * !!! Update your database (Ext. Manager)

--- a/Resources/Private/Templates/Post/edit.html
+++ b/Resources/Private/Templates/Post/edit.html
@@ -1,7 +1,7 @@
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit post "{post.title}"</h1></div>
 <f:form method="post" controller="Post" action="update" name="updatedPost" object="{post}" arguments="{post : post, blog : blog}" >
 	<label for="author">Author</label><br />
-	<f:form.textbox property="author" /><br />
+	<f:form.select value="{post.author.uid}" name="author" options="{authors}" optionValueField="uid" optionLabelField="fullName"><select><option>###dummy###</option></select></f:form.select><br />
 	<label for="title">Title</label><br />
 	<f:form.textbox property="title" /><br />
 	<label for="content">Content</label><br />
