--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -13,7 +13,7 @@
 						</h3>
 						<p class="bodytext"><f:format.crop maxCharacters="100">{post.content}</f:format.crop></p>
 						<p>
-							By: {post.author}<br />
+							By: {post.author.fullName}<br />
 							Tags: <f:for each="{post.tags}" as="tag">[{tag.name}]&nbsp;</f:for><br />
 							<f:link.action controller="Post" action="show" arguments="{post : post}"><f:translate key="read_more">read more &gt;&gt;</f:translate></f:link.action><br />
 							<f:link.action controller="Post" action="edit" arguments="{post : post, blog : blog}">Edit</f:link.action>&nbsp;<f:link.action controller="Post" action="delete" arguments="{post : post, blog : blog}">Delete</f:link.action>
