--- a/Resources/Private/Templates/Post/new.html
+++ b/Resources/Private/Templates/Post/new.html
@@ -1,10 +1,12 @@
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Create a new Post</h1></div>
 <f:form method="post" controller="Post" action="create"  name="newPost" object="{newPost}" arguments="{blog : blog}">
 	<label for="author">Author <span class="required">(required)</span></label><br />
-	<f:form.textbox property="author" /><br />
+	<f:form.select property="author" options="{authors}" optionValueField="uid" optionLabelField="fullName"><select><option>###dummy###</option></select></f:form.select><br />
 	<label for="title">Title <span class="required">(required)</span></label><br />
 	<f:form.textbox property="title" /><br />
 	<label for="content">Content <span class="required">(required)</span></label><br />
 	<f:form.textarea property="content" rows="8" cols="46" /><br />
+	<label for="tags">Tags</label><br />
+	<f:form.select property="tags" options="{tags}" multiple="multiple" size="5"><select><option>###dummy###</option></select></f:form.select>
 	<f:form.submit>Create</f:form.submit>
 </f:form>
