--- a/Resources/Private/Templates/Post/show.html
+++ b/Resources/Private/Templates/Post/show.html
@@ -4,7 +4,7 @@
 		{post.title}
 	</h3>
 	<p class="bodytext"><f:format.Nl2br>{post.content}</f:format.Nl2br></p>
-	<p class="bodytext">By: {post.author}</p>
+	<p class="bodytext">By: {post.author.fullName}</p>
 	<div class="tx-blogexample-tags">
 		Tags: <f:for each="{post.tags}" as="tag">[{tag.name}] </f:for>
 	</div>
