This commit prepares the BlogExample for the upcoming commit of Extbase [+TASK] BlogExample: Added Domain Object Administrator as an example how to utilize fe_users; PLEASE UPDATE YOUR DATABASE! [+TASK] BlogExample: Added a preliminary findSpecial() method for testing [+TASK] BlogExample: Set the loading strategy of comments to "proxy" [+TASK] BlogExample: Adjusted templates (not fully functional by now)

--- a/Resources/Private/Templates/Blog/new.html
+++ b/Resources/Private/Templates/Blog/new.html
@@ -5,5 +5,7 @@
 	<f:form.textbox property="name" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
+	<label for="administrator">Administrator</label><br />
+	<f:form.select property="administrator" options="{administrators}" optionValueField="uid" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
 	<f:form.submit>Create</f:form.submit>
 </f:form>
