[!!!] [~TASK] BlogExample (Domain): The directory structure of the Domain has changed accordting to changes in FLOW3. The Domain folder holds now different folders for the Model, the Repository, and-if needed-the Validator, and Service. Please Change your folder structure AND your class names! [!!!] [~TASK] BlogExample (Domain): Renamed Blog.name to Blog.title according to latest changes in FLOW3. Please update your database! [~TASK] BlogExample: Moved Icons folder to Public.

--- a/Resources/Private/Templates/Blog/index.html
+++ b/Resources/Private/Templates/Blog/index.html
@@ -4,7 +4,7 @@
 <ul>
 	<f:for each="{blogs}" as="blog">
 		<li>
-			<h3><f:link.action controller="Post" action="index" arguments="{blog : blog}">{blog.name}</f:link.action></h3>
+			<h3><f:link.action controller="Post" action="index" arguments="{blog : blog}">{blog.title}</f:link.action></h3>
 			<p>
 				<f:format.Nl2br>{blog.description}</f:format.Nl2br><br />
 				<f:link.action action="show" arguments="{blog : blog}">Show</f:link.action>
