--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -1,4 +1,5 @@
-<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Welcome to {blog.name}</h1></div>
+
+<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Welcome to {blog.title}</h1></div>
 <p class="bodytext">{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
 <f:if condition="{blog.administrator}">
 	<f:then>
