--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -1,4 +1,4 @@
-<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.name}"</h1></div>
+<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
 <f:form method="post" controller="Blog" action="update" name="updatedBlog" object="{blog}" arguments="{blog: blog}" >
 	<label for="name">Name</label><br />
