--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -1,8 +1,8 @@
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
 <f:form method="post" controller="Blog" action="update" name="updatedBlog" object="{blog}" arguments="{blog: blog}" >
-	<label for="name">Name</label><br />
-	<f:form.textbox property="name" /><br />
+	<label for="title">Name</label><br />
+	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
 	<label for="administrator">Administrator</label><br />
