[+FEATURE] BlogExample (Templates): Added Layout and Partial support

--- a/Resources/Private/Templates/Blog/index.html
+++ b/Resources/Private/Templates/Blog/index.html
@@ -1,4 +1,7 @@
+<f:layout name="default" />
+<f:section name="main">
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Welcome to the Blog Example</h1></div>
+
 <p class="bodytext">This installation serves as a demonstration for basic development techniques used in Extbase/FLOW3 applications. Please note that this example might be not fully functional at certain times because we're continuously working on it and it has not yet been officially released.</p>
 <p class="bodytext">Here is a list of blogs:</p>
 <ul>
@@ -17,3 +20,4 @@
 <p><f:link.action action="new">Create a blog</f:link.action></p>
 <p><f:link.action action="populate">Create example data</f:link.action></p>
 <p><f:link.action action="deleteAll">Delete all Blogs [!!!]</f:link.action></p>
+</f:section>
