--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -1,3 +1,6 @@
+<f:layout name="default" />
+<f:section name="main">
+
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
 <f:form method="post" controller="Blog" action="update" name="updatedBlog" object="{blog}" arguments="{blog: blog}" >
@@ -9,3 +12,4 @@
 	<f:form.select property="administrator" value="{blog.administrator.uid}" options="{administrators}" optionValueField="uid" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
 	<f:form.submit>Send</f:form.submit>
 </f:form>
+</f:section>
