--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -1,5 +1,7 @@
+<f:layout name="default" />
+<f:section name="main">
 
-<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Welcome to {blog.title}</h1></div>
+<div class="csc-header csc-header-n1"><h2 class="csc-firstHeader">Welcome to {blog.title}</h2></div>
 <p class="bodytext">{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
 <f:if condition="{blog.administrator}">
 	<f:then>
@@ -18,12 +20,11 @@
 				<f:for each="{blog.posts}" as="post">
 					<li>
 						<h3>
-							<f:format.date>{post.date}</f:format.date>
 							<f:link.action action="show" controller="Post" arguments="{post: post, blog: post.blog}">{post.title}</f:link.action>
 						</h3>
 						<p class="bodytext"><f:format.crop maxCharacters="100">{post.content}</f:format.crop></p>
+						<f:render partial="postMetadata" arguments="{post: post}"/>
 						<p>
-							By: {post.author.fullName}<br />
 							Tags: <f:for each="{post.tags}" as="tag">[{tag.name}]&nbsp;</f:for><br />
 							<f:link.action controller="Post" action="show" arguments="{post : post}"><f:translate key="read_more">read more &gt;&gt;</f:translate></f:link.action><br />
 							<f:link.action controller="Post" action="edit" arguments="{post : post, blog : blog}">Edit</f:link.action>&nbsp;<f:link.action controller="Post" action="delete" arguments="{post : post, blog : blog}">Delete</f:link.action>
@@ -38,3 +39,4 @@
 	</f:if>
 	<p><f:link.action action="new" controller="Post" arguments="{blog : blog}">Create a new Post</f:link.action></p>
 </div>
+</f:section>
