--- a/Resources/Private/Templates/Blog/new.html
+++ b/Resources/Private/Templates/Blog/new.html
@@ -5,11 +5,11 @@
 <p class="bodytext">Enter information about your new blog below:</p>
 <f:form method="post" controller="Blog" action="create" name="newBlog" object="{newBlog}">
 	<label for="name">Name <span class="required">(required)</span></label><br />
-	<f:form.textbox property="name" /><br />
+	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
-	<label for="administrator">Administrator</label><br />
-	<f:form.select property="administrator" options="{administrators}" optionValueField="uid" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
+	<!-- <label for="administrator">Administrator</label><br />
+	<f:form.select property="administrator" options="{administrators}" optionValueField="uid" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br /> -->
 	<f:form.submit>Create</f:form.submit>
 </f:form>
 
