--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -23,7 +23,7 @@
 							<f:link.action action="show" controller="Post" arguments="{post: post, blog: post.blog}">{post.title}</f:link.action>
 						</h3>
 						<p class="bodytext"><f:format.crop maxCharacters="100">{post.content}</f:format.crop></p>
-						<f:render partial="postMetadata" arguments="{post: post}"/>
+						<f:render partial="postMetaData" arguments="{post: post}"/>
 						<p>
 							Tags: <f:for each="{post.tags}" as="tag">[{tag.name}]&nbsp;</f:for><br />
 							<f:link.action controller="Post" action="show" arguments="{post : post}"><f:translate key="read_more">read more &gt;&gt;</f:translate></f:link.action><br />
