--- a/Resources/Private/Templates/Blog/new.html
+++ b/Resources/Private/Templates/Blog/new.html
@@ -8,8 +8,8 @@
 	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
-	<!-- <label for="administrator">Administrator</label><br />
-	<f:form.select property="administrator" options="{administrators}" optionValueField="uid" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br /> -->
+	<label for="administrator">Administrator</label><br />
+	<f:form.select property="administrator" options="{administrators}" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
 	<f:form.submit>Create</f:form.submit>
 </f:form>
 
