--- a/Resources/Private/Templates/Post/edit.html
+++ b/Resources/Private/Templates/Post/edit.html
@@ -1,5 +1,5 @@
 <f:layout name="default" />
-<f:section name="main">
+<f:section name="mainbox">
 
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit post "{post.title}"</h1></div>
 <f:form method="post" controller="Post" action="update" name="post" object="{post}" arguments="{blog : blog}" >
