--- a/Resources/Private/Templates/Post/show.html
+++ b/Resources/Private/Templates/Post/show.html
@@ -1,5 +1,5 @@
 <f:layout name="default" />
-<f:section name="main">
+<f:section name="mainbox">
 
 <div class="tx-blogexample-single-item">
 	<span class="tx-blogexample-single-date"><f:format.date>{post.date}</f:format.date></span>
