--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -1,9 +1,15 @@
 <f:layout name="default" />
-<f:section name="main">
+<f:section name="mainbox">
 
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
-<f:form method="post" action="update" name="blog" object="{blog}">
+<f:form method="post" action="update" name="blog" object="{blog}" arguments="{existingBlog: existingBlog}" >
+	<!--
+		This fixes a problem with lost identity
+		after a clone of the blog object and forward. 
+	-->
+	<f:form.hidden name="blog" value="{existingBlog}" />
+	
 	<label for="title">Name</label><br />
 	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
