--- a/Resources/Private/Templates/Blog/index.html
+++ b/Resources/Private/Templates/Blog/index.html
@@ -1,23 +1,34 @@
 <f:layout name="default" />
-<f:section name="main">
-<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Welcome to the Blog Example</h1></div>
-
-<p class="bodytext">This installation serves as a demonstration for basic development techniques used in Extbase/FLOW3 applications. Please note that this example might be not fully functional at certain times because we're continuously working on it and it has not yet been officially released.</p>
-<p class="bodytext">Here is a list of blogs:</p>
-<ul>
-	<f:for each="{blogs}" as="blog">
-		<li>
-			<h3><f:link.action controller="Post" action="index" arguments="{blog : blog}">{blog.title}</f:link.action></h3>
-			<p>
-				<f:format.nl2br>{blog.description}</f:format.nl2br><br />
-				<f:link.action controller="Post" action="index" arguments="{blog : blog}">Show</f:link.action>
-				<f:link.action action="edit" arguments="{blog : blog}">Edit</f:link.action>
-				<f:link.action action="delete" arguments="{blog : blog}">Delete</f:link.action>
-			</p>
-		</li>
-	</f:for>
-</ul>
-<p><f:link.action action="new">Create a blog</f:link.action></p>
-<p><f:link.action action="populate">Create example data</f:link.action></p>
-<p><f:link.action action="deleteAll">Delete all Blogs [!!!]</f:link.action></p>
+<f:section name="mainbox">
+	<p class="bodytext">Welcome to the Blog Example! This installation serves as a demonstration for
+	basic development techniques used in Extbase/FLOW3 applications. Please
+	note that this example might be not fully functional at certain times
+	because we're continuously working on it and it has not yet been
+	officially released.</p>
+	<ul>
+		<f:if condition="{blogs}">
+			<f:then>
+				<p class="bodytext">Here is a list of blogs:</p>
+				<ul>
+					<f:for each="{blogs}" as="blog">
+						<li>
+						<h3><f:link.action action="index" controller="Post"
+							arguments="{blog : blog}">{blog.title}</f:link.action></h3>
+						<p><f:format.nl2br>{blog.description}</f:format.nl2br> <f:link.action
+							action="edit" controller="Blog" arguments="{blog : blog}">Edit</f:link.action>
+						<f:link.action action="delete" controller="Blog"
+							arguments="{blog : blog}">Delete</f:link.action></p>
+						</li>
+					</f:for>
+				</ul>
+				<p><f:link.action action="new">Create another blog</f:link.action></p>
+				<p><f:link.action action="populate">Create example data</f:link.action></p>
+				<p><f:link.action action="deleteAll">Delete all Blogs [!!!]</f:link.action></p>
+			</f:then>
+			<f:else>
+				<p><strong><f:link.action action="new">Create your first blog</f:link.action></strong></p>
+				<p><f:link.action action="populate">Create example data</f:link.action></p>
+			</f:else>
+		</f:if>
+	</ul>
 </f:section>
