--- a/Resources/Private/Templates/Blog/new.html
+++ b/Resources/Private/Templates/Blog/new.html
@@ -1,5 +1,5 @@
 <f:layout name="default" />
-<f:section name="main">
+<f:section name="mainbox">
 
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Create a new blog</h1></div>
 <p class="bodytext">Enter information about your new blog below:</p>
