--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -1,5 +1,6 @@
 <f:layout name="default" />
-<f:section name="main">
+
+<f:section name="mainbox">
 
 <div class="csc-header csc-header-n1"><h2 class="csc-firstHeader">Welcome to {blog.title}</h2></div>
 <p class="bodytext">{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
