--- a/Resources/Private/Templates/Post/new.html
+++ b/Resources/Private/Templates/Post/new.html
@@ -1,5 +1,5 @@
 <f:layout name="default" />
-<f:section name="main">
+<f:section name="mainbox">
 
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Create a new Post</h1></div>
 <f:form method="post" controller="Post" action="create"  name="newPost" object="{newPost}" arguments="{blog : blog}">
