[~CONFIGURATION] BlogExample (Domain): The Posts are now stored in a LazyObjectStorage. This enables you to count the posts without loading the real instances. [+BUGFIX] BlogExample (Domain): Removed $post->removeAllTags() and added $blog->removeAllPosts(). [+BUGFIX] BlogExample: Fixed configuration of localization. [+BUGFIX] BlogExample: Added mapping configuration to map the property "blog" on the column "blog_uid" (mostly for demonstration purposes) . [-TASK] BlogExample (Domain): Removed properties votes and published from Blog. [~TASK] BlogExample: Updated Templates.

--- a/Resources/Private/Templates/Blog/index.html
+++ b/Resources/Private/Templates/Blog/index.html
@@ -13,8 +13,8 @@
 					<f:for each="{blogs}" as="blog">
 						<li>
 						<h3><f:link.action action="index" controller="Post"
-							arguments="{blog : blog}">{blog.title}</f:link.action></h3>
-						<p><f:format.nl2br>{blog.description}</f:format.nl2br> <f:link.action
+							arguments="{blog : blog}">{blog.title} (<f:count subject="{blog.posts}" />)</f:link.action></h3>
+						<p><f:format.nl2br>{blog.description} </f:format.nl2br><f:link.action
 							action="edit" controller="Blog" arguments="{blog : blog}">Edit</f:link.action>
 						<f:link.action action="delete" controller="Blog"
 							arguments="{blog : blog}">Delete</f:link.action></p>
