--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -3,19 +3,13 @@
 
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
-<f:form method="post" action="update" name="blog" object="{blog}" arguments="{existingBlog: existingBlog}" >
-	<!--
-		This fixes a problem with lost identity
-		after a clone of the blog object and forward. 
-	-->
-	<f:form.hidden name="blog" value="{existingBlog}" />
-	
+<f:form method="post" action="update" name="blog" object="{blog}">
 	<label for="title">Name</label><br />
 	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
 	<label for="administrator">Administrator</label><br />
 	<f:form.select property="administrator" value="{blog.administrator}" options="{administrators}" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
-	<f:form.submit>Send</f:form.submit>
+	<f:form.submit class="submit" value="Submit"/>
 </f:form>
 </f:section>
