--- a/Resources/Private/Templates/Blog/new.html
+++ b/Resources/Private/Templates/Blog/new.html
@@ -6,7 +6,7 @@
 <f:form method="post" controller="Blog" action="create" name="newBlog" object="{newBlog}">
 	<label for="name">Name <span class="required">(required)</span></label><br />
 	<f:form.textbox property="title" /><br />
-	<label for="description">Description</label><br />
+	<label for="description">Description (max. 150 chars)</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
 	<label for="administrator">Administrator</label><br />
 	<f:form.select property="administrator" options="{administrators}" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
