[TASK] BlogExample: Updated the way Flash Messages are used to fit to the latest commits.

--- a/Resources/Private/Layouts/default.html
+++ b/Resources/Private/Layouts/default.html
@@ -1,5 +1,8 @@
 <h1>Blog Example</h1>
 <hr />
+
+<f:renderFlashMessages class="tx-extbase-flash-message" />
+
 <f:render section="mainbox" />
 <hr />
 <p>&copy; TYPO3 Association</p>
