--- a/Resources/Private/Templates/Blog/edit.html
+++ b/Resources/Private/Templates/Blog/edit.html
@@ -4,7 +4,7 @@
 <div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
 <p class="bodytext">Edit the information about your blog below:</p>
 <f:form method="post" action="update" name="blog" object="{blog}">
-	<label for="title">Name</label><br />
+	<label for="title">Title</label><br />
 	<f:form.textbox property="title" /><br />
 	<label for="description">Description</label><br />
 	<f:form.textarea property="description" rows="8" cols="46" /><br />
