--- a/Resources/Private/Backend/Templates/Blog/new.html
+++ b/Resources/Private/Backend/Templates/Blog/new.html
@@ -1,7 +1,12 @@
 <f:layout name="default" />
 
+<f:section name="iconButtons">
+	<f:be.buttons.icon uri="{f:uri.action(action='index')}" icon="closedok" title="Cancel" />
+	<f:be.buttons.icon uri="javascript: document.newBlog.submit();" icon="saveandclosedok" title="Save" />
+</f:section>
+
 <f:section name="content">
-	<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Create a new blog</h1></div>
+	<h2>Create a new blog</h2>
 	<p class="bodytext">Enter information about your new blog below:</p>
 	<f:render partial="formErrors" arguments="{for: 'newBlog'}" />
 	<f:form method="post" controller="Blog" action="create" name="newBlog" object="{newBlog}">
@@ -11,6 +16,5 @@
 		<f:form.textarea property="description" rows="8" cols="46" /><br />
 		<label for="administrator">Administrator</label><br />
 		<f:form.select property="administrator" options="{administrators}" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
-		<f:form.submit class="submit" value="Submit"/>
 	</f:form>
 </f:section>
