--- a/Resources/Private/Backend/Templates/Post/show.html
+++ b/Resources/Private/Backend/Templates/Post/show.html
@@ -1,6 +1,11 @@
 {namespace blog=Tx_BlogExample_ViewHelpers}
 <f:layout name="default" />
 
+<f:section name="iconButtons">
+	<f:be.buttons.icon uri="{f:uri.action(action='index' arguments='{blog: blog}')}" icon="closedok" title="Cancel" />
+	<f:be.buttons.icon uri="{f:uri.action(action='edit' arguments='{post: post, blog: blog}')}" icon="edit2" title="Edit this Post" />
+</f:section>
+
 <f:section name="content">
 	<div class="tx-blogexample-single-item">
 		<span class="tx-blogexample-single-date"><f:format.date>{post.date}</f:format.date></span>
@@ -42,22 +47,4 @@
 			</div>
 		</f:for>
 	</div>
-	<h4>Add your own</h4>
-	<f:form name="newComment" method="post" controller="Comment" action="create" object="{newComment}" arguments="{post : post}">
-		<f:form.errors for="newComment">
-			<div class="error">
-				<strong>{error.propertyName}</strong>: <f:for each="{error.errors}" as="errorDetail">{errorDetail.message}</f:for>
-			</div>
-		</f:form.errors>
-		<label for="author">name <span class="required">(required)</span></label><br />
-		<f:form.textbox id="author" property="author" />
-		<br />
-		<label for="email">email <span class="required">(required)</span></label><br />
-		<f:form.textbox id="email" property="email" />
-		<br />
-		<label for="text">message <span class="required">(required)</span></label><br />
-		<f:form.textarea id="text" property="content" rows="6" cols="46"/>
-		<br />
-		<f:form.submit class="submit" value="Submit"/>
-	</f:form>
 </f:section>
