--- a/Resources/Private/Layouts/default.html
+++ b/Resources/Private/Layouts/default.html
@@ -2,7 +2,7 @@
 <hr />
 
 <f:renderFlashMessages class="tx-extbase-flash-message" />
+<f:render section="content" />
 
-<f:render section="mainbox" />
 <hr />
 <p>&copy; TYPO3 Association</p>
