--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -1,42 +1,43 @@
 <f:layout name="default" />
-<f:section name="mainbox">
 
-<div class="csc-header csc-header-n1"><h2 class="csc-firstHeader">Welcome to {blog.title}</h2></div>
-<p class="bodytext">{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
-<f:if condition="{blog.administrator}">
-	<f:then>
-		If you have any further questions, feel free to contact the administrator {blog.administrator.name}<f:if condition="{blog.administrator.email}"> (<a href="mailto:{blog.administrator.email}">{blog.administrator.email})</a></f:if>.
-	</f:then>
-	<f:else>
-		There is currently no administrator assigned to this Blog.
-	</f:else>
-</f:if>
-</p>
-<div class="tx-blogexample-list-container">
-	<f:if condition="{blog.posts}">
+<f:section name="content">
+	<div class="csc-header csc-header-n1"><h2 class="csc-firstHeader">Welcome to {blog.title}</h2></div>
+	<p class="bodytext">{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
+	<f:if condition="{blog.administrator}">
 		<f:then>
-		<p class="bodytext"><f:translate key="label_recent_posts">Below are the most recent posts:</f:translate></p>
-			<ul>
-				<f:for each="{recentPosts}" as="post">
-					<li>
-						<h3>
-							<f:link.action action="show" controller="Post" arguments="{post: post, blog: post.blog}">{post.title}</f:link.action>
-						</h3>
-						<p class="bodytext"><f:format.crop maxCharacters="100">{post.content}</f:format.crop></p>
-						<f:render partial="postMetaData" arguments="{post: post}"/>
-						<p>
-							Tags: <f:for each="{post.tags}" as="tag">[{tag.name}]&nbsp;</f:for><br />
-							<f:link.action controller="Post" action="show" arguments="{post : post}"><f:translate key="read_more">read more &gt;&gt;</f:translate></f:link.action><br />
-							<f:link.action controller="Post" action="edit" arguments="{post : post, blog : blog}">Edit</f:link.action>&nbsp;<f:link.action controller="Post" action="delete" arguments="{post : post, blog : blog}">Delete</f:link.action>
-							</p>
-					</li>
-				</f:for>
-			</ul>
+			If you have any further questions, feel free to contact the administrator {blog.administrator.name}<f:if condition="{blog.administrator.email}"> (<a href="mailto:{blog.administrator.email}">{blog.administrator.email})</a></f:if>.
 		</f:then>
 		<f:else>
-			<p>This blog currently doesn't contain any posts.</p>
+			There is currently no administrator assigned to this Blog.
 		</f:else>
 	</f:if>
-	<p><f:link.action action="new" controller="Post" arguments="{blog : blog}">Create a new Post</f:link.action></p>
-</div>
+	</p>
+	<div class="tx-blogexample-list-container">
+		<f:if condition="{blog.posts}">
+			<f:then>
+			<p class="bodytext"><f:translate key="label_recent_posts">Below are the most recent posts:</f:translate></p>
+				<ul>
+					<f:for each="{recentPosts}" as="post">
+						<li>
+							<h3>
+								<f:link.action action="show" controller="Post" arguments="{post: post, blog: post.blog}">{post.title}</f:link.action>
+							</h3>
+							<p class="bodytext"><f:format.crop maxCharacters="100">{post.content}</f:format.crop></p>
+							<f:render partial="postMetaData" arguments="{post: post}"/>
+							<f:render partial="postTags" arguments="{post: post}"/>
+							<p>
+								<f:link.action controller="Post" action="show" arguments="{post : post}"><f:translate key="read_more">read more &gt;&gt;</f:translate></f:link.action><br />
+								<f:link.action controller="Post" action="edit" arguments="{post : post, blog : blog}">Edit</f:link.action>&nbsp;<f:link.action controller="Post" action="delete" arguments="{post : post, blog : blog}">Delete</f:link.action>
+							</p>
+						</li>
+					</f:for>
+				</ul>
+			</f:then>
+			<f:else>
+				<p>This blog currently doesn't contain any posts.</p>
+			</f:else>
+		</f:if>
+		<p><f:link.action action="new" controller="Post" arguments="{blog : blog}">Create a new Post</f:link.action></p>
+		<p><f:link.action arguments="{blog : blog}" format="txt" target="_blank">Show posts as text (experimental)</f:link.action></p>
+	</div>
 </f:section>
