--- a/Resources/Private/Backend/Templates/Blog/new.html
+++ b/Resources/Private/Backend/Templates/Blog/new.html
@@ -1,7 +1,7 @@
 <f:layout name="default" />
 
 <f:section name="iconButtons">
-	<f:be.buttons.icon uri="{f:uri.action(action='index')}" icon="closedok" title="Cancel" />
+	<f:be.buttons.icon uri="{f:uri.action(action:'index')}" icon="closedok" title="Cancel" />
 	<f:be.buttons.icon uri="javascript: document.newBlog.submit();" icon="saveandclosedok" title="Save" />
 </f:section>
 
