--- a/Resources/Private/Backend/Templates/Blog/edit.html
+++ b/Resources/Private/Backend/Templates/Blog/edit.html
@@ -3,7 +3,7 @@
 <f:section name="iconButtons">
 	<f:be.buttons.icon uri="{f:uri.action(action:'index')}" icon="closedok" title="Cancel" />
 	<f:be.buttons.icon uri="javascript: document.blog.submit();" icon="saveandclosedok" title="Save" />
-	<f:be.buttons.icon uri="{f:uri.action(action:'delete', arguments:{blog: blog}" icon="deletedok" title="Delete this blog" />
+	<f:be.buttons.icon uri="{f:uri.action(action:'delete', arguments:{blog: blog})}" icon="deletedok" title="Delete this blog" />
 </f:section>
 
 <f:section name="content">
