[~TASK] BlogExample: Changed loading strategy of comments. Fixed typo.

--- a/Resources/Private/Backend/Templates/Post/edit.html
+++ b/Resources/Private/Backend/Templates/Post/edit.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="tx-blogexample-comment-text">
 							<f:format.nl2br>{comment.content}</f:format.nl2br>
-							<f:be.buttons.icon uri="{f:uri.action(action:'delete', controller: 'Comment', arguments:{post: post, comment: comment})}" icon="deletedok" title="Create new Post" />
+							<f:be.buttons.icon uri="{f:uri.action(action:'delete', controller: 'Comment', arguments:{post: post, comment: comment})}" icon="deletedok" title="Delete Comment" />
 						</div>
 						<hr class="clear" />
 					</div>
