--- a/Resources/Private/Backend/Templates/Blog/new.html
+++ b/Resources/Private/Backend/Templates/Blog/new.html
@@ -15,6 +15,6 @@
 		<label for="description">Description (max. 150 chars)</label><br />
 		<f:form.textarea property="description" rows="8" cols="46" /><br />
 		<label for="administrator">Administrator</label><br />
-		<f:form.select property="administrator" options="{administrators}" optionLabelField="name"><select><option>###dummy###</option></select></f:form.select><br />
+		<f:form.select property="administrator" options="{administrators}" optionLabelField="name"><select><option>dummy</option></select></f:form.select><br />
 	</f:form>
 </f:section>
