[~TASK] BlogExample: Small template changes.

--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -37,6 +37,6 @@
 			</f:else>
 		</f:if>
 		<p><f:link.action action="new" controller="Post" arguments="{blog : blog}">Create a new Post</f:link.action>
-			<br /><f:link.action arguments="{blog : blog}" format="txt" target="_blank">Show posts as text (experimental)</f:link.action></p>
+			<br /><f:link.action arguments="{blog : blog}" format="txt" target="_blank">Show posts as plain text</f:link.action></p>
 	</div>
 </f:section>
