--- a/Resources/Private/Templates/Blog/index.html
+++ b/Resources/Private/Templates/Blog/index.html
@@ -1,10 +1,7 @@
 <f:layout name="default" />
 <f:section name="content">
 	<p>Welcome to the Blog Example! This installation serves as a demonstration for
-	basic development techniques used in Extbase/FLOW3 applications. Please
-	note that this example might be not fully functional at certain times
-	because we're continuously working on it and it has not yet been
-	officially released.</p>
+	basic development techniques used in Extbase/FLOW3 applications.</p>
 	<f:if condition="{blogs}">
 		<f:then>
 			<p>Here is a list of blogs:</p>
