[~TASK] BlogExample: Fixed typo.

--- a/Resources/Private/Templates/Post/index.html
+++ b/Resources/Private/Templates/Post/index.html
@@ -6,7 +6,7 @@
 	<p>{blog.description} In order to start blogging, read the <a href="#">Help section</a>.
 	<f:if condition="{blog.administrator}">
 		<f:then>
-			If you have any further questions, feel free to contact the administrator {blog.administrator.name}<f:if condition="{blog.administrator.email}"> (<a href="mailto:{blog.administrator.email}">{blog.administrator.email})</a></f:if>.
+			If you have any further questions, feel free to contact the administrator {blog.administrator.name}<f:if condition="{blog.administrator.email}"> (<a href="mailto:{blog.administrator.email}">{blog.administrator.email}</a>)</f:if>.
 		</f:then>
 		<f:else>
 			There is currently no administrator assigned to this Blog.
