--- a/Resources/Private/Templates/Post/edit.html
+++ b/Resources/Private/Templates/Post/edit.html
@@ -5,7 +5,7 @@
 	<f:render partial="formErrors" arguments="{for: 'post'}" />
 	<f:form method="post" controller="Post" action="update" name="post" object="{post}" arguments="{blog : blog}" >
 		<label for="author">Author</label><br />
-		<f:form.select value="{post.author.uid}" name="author" options="{authors}" optionValueField="uid" optionLabelField="fullName"><select><option>dummy</option></select></f:form.select><br />
+		<f:form.select value="{post.author}" name="author" options="{authors}" optionLabelField="fullName"><select><option>dummy</option></select></f:form.select><br />
 		<label for="title">Title</label><br />
 		<f:form.textbox property="title" /><br />
 		<label for="content">Content</label><br />
